fixed centered and inline layout bug

--- a/Item/Item.module.less
+++ b/Item/Item.module.less
@@ -114,7 +114,8 @@
 
 			.itemContent,
 			.content {
-				width: unset;
+				flex-shrink: 1;
+				overflow: auto;
 			}
 
 			&.hasLabel {
@@ -129,6 +130,10 @@
 			.content,
 			&.hasLabel {
 				max-width: fit-content;
+			}
+
+			&.inline {
+				max-width: @agate-item-inline-max-width;
 			}
 		}
 
